<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/subjective_green">
        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/btn_back_selector"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/drink_title"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/today_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/drink_today"
                android:textSize="16sp" />

        </LinearLayout>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/stroke_green"
            />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/history_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/corner_white_no_radius"
                android:gravity="center"
                android:text="@string/drink_recent"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/id_tab_line_iv"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/tab_selected_pressed_holo"
            android:contentDescription="tab"/>
    </LinearLayout>







</LinearLayout>
