<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/login_bg"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/subjective_green"
        android:gravity="center"
        android:text="@string/drink_title"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/drink_today"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/subjective_green"/>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/corner_white_no_radius"
                android:gravity="center"
                android:text="@string/drink_recent"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/subjective_green"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/noDrinkItem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="“小朋友今天还没有喝水吆”"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/pic_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
